--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,8 @@ on:
     branches:
       - main
 permissions:
-  contents: write
+  contents: read
+  pages: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
