--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,7 @@ on:
     branches:
       - main
 permissions:
-  contents: read
-  pages: write
+  contents: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
