--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,12 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - run: ls -la
-
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: yarn
+          # cache: yarn
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
