--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@mdx-js/react": "^1.6.22",
+    "autoprefixer": "^10.4.16",
     "clsx": "^1.2.1",
+    "postcss": "^8.4.31",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.3",
