--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,12 @@ jobs:
           node-version: 18
           # cache: yarn
 
+      - name: If repo is website-prod replace text website.wopee.io to wopee.io
+        if: github.repository == 'autonomous-testing/website-prod'
+        run:
+          sed -i 's/website.wopee.io/wopee.io/g' ./CNAME
+          sed -i 's/website.wopee.io/wopee.io/g' ./docusaurus.config.js
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Build website
