--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "tailwindcss": "^3.3.3",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.1.1",
