feat: Exclude sample blog posts and draft first Wopee.io post

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,17 +1,11 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+marcel:
+  name: Marcel Veselka
+  title: CEO, Wopee.io
+  url: https://github.com/marcel-veselka
+  image_url: https://github.com/marcel-veselka.png
 
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+jan:
+  name: Jan Beránek
+  title: CXO, Wopee.io
+  url: https://github.com/jan-beranek
+  image_url: https://github.com/jan-beranek.png
