feat: update Marcel's profile URL to LinkedIn instead of GitHub

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,7 +1,7 @@
 marcel:
   name: Marcel Veselka
   title: CEO, Wopee.io
-  url: https://github.com/marcel-veselka
+  url: https://www.linkedin.com/in/marcelveselka/
   image_url: https://github.com/marcel-veselka.png
 
 jan:
