--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "optimize-images": "node scripts/optimize-images.js"
   },
   "dependencies": {
     "@docusaurus/core": "^3.7.0",
@@ -39,6 +40,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.13",
     "tw-animate-css": "^1.2.9",
